# microchip-pack-extractor

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: cache.rs  index.rs  lib.rs  main.rs  package.rs  pic.rs  web.rs  webcache.rs
tools/: deserialize_gen.prompt  deserializer_gen.py  xml_summary.prompt  xml_summary.py
