[package]
name = "microchip-pack-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
env_logger = { version = "0.11", features = ["kv"] }
log = { version = "0.4", features = ["kv"] }
quoted-string = "0.6.1"
reqwest = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
tokio = { version = "1", features = ["full"] }
