[package]
name = "microchip-pack-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
env_logger = { version = "0.11", features = ["kv"] }
futures = "0.3"
log = { version = "0.4", features = ["kv"] }
num_cpus = "1"
quoted-string = "0.6"
reqwest = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8"
tokio = { version = "1", features = ["full"] }
zip = "8.4"
