[package]
name = "microchip-pack-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
env_logger = { version = "0.11.10", features = ["kv"] }
futures = "0.3.32"
log = { version = "0.4.29", features = ["kv"] }
num_cpus = "1.17.0"
quoted-string = "0.6.1"
rayon = "1.11.0"
reqwest = { version = "0.13.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
zip = "8.4.0"
